# live-coding

./: Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  teste.py
live_coding/src/application/controllers/: population.py
live_coding/src/application/controllers/adapters/: population_dto.py
live_coding/src/application/controllers/exceptions/: no_class_app.py
live_coding/src/application/data/: mapping.json
live_coding/src/application/services/: population.py
live_coding/src/application/use_cases/: population_climate.py
live_coding/src/domain/: data_brazil.py  data_ibge.py
live_coding/src/domain/use_cases/: population_climate.py
live_coding/src/infra/: constants.py
live_coding/src/infra/databases/: alembic.ini
live_coding/src/infra/databases/alembic/versions/: a001cd0020af_model_example.py
live_coding/src/infra/databases/migrations/: alembic.ini  conn.py  env.py
live_coding/src/infra/databases/migrations/models/: simulation_population.py
live_coding/src/infra/databases/migrations/versions/: ba0ab7f7e214_model_consultpouplation.py
live_coding/src/infra/protocols/http/: api_brazil.py  api_climate.py  api_ibge.py  api_population.py
tests/: test  tests_application.py
