[tool.poetry]
name = "live-coding"
version = "0.1.0"
description = ""
authors = ["wsbengineer <wellingtons.bezerra@hotmail.com>"]
readme = "README.md"
packages = [{include = "live_coding"}]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.11.1"
requests = "^2.31.0"
flask = "^2.3.2"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
